# ChangeGuard

./: .gitignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml  run_tenantsafe_rollout.py
changeguard/: CLAUDE.md  Dockerfile  README.md  __init__.py  client.py  internal_state.py  models.py  openenv.yaml  pyproject.toml
changeguard/docs/: SPEC.md
changeguard/scripts/: plot_training.py  run_fixed_seed_pipeline.sh
changeguard/server/: __init__.py  app.py  changeguard_environment.py
changeguard/tests/: test_changeguard_environment.py  test_models.py  test_reward_hacking.py  test_server_client_demo.py  test_smoke.py
changeguard/training/: changeguard_tool_env.py  evaluate_policy.py  train_grpo.py
dispatch_arena/: blog_new.md  models.py
dispatch_arena/scripts/: train_grpo_smoke.py
dispatch_arena/scripts/_grpo_normal_out/final_lora/: README.md  adapter_config.json
dispatch_arena/server/: env.py  metrics.py  scenarios.py
dispatch_arena/server/static/: index.html
dispatch_arena/server/static/assets/: index-370d6e94.css  index-f0da1f80.js
dispatch_arena/tests/: test_environment.py
docs/: ARCHITECTURE.md  FORMAL_ENV_SPEC.md  SPEC_V1.md  TRAINING_STRATEGY.md
docs/archive/: FINAL_AUDIT.md  POLICIES_AND_INVARIANTS.md  TRAINING_LOOP_AND_DATASETS.md  VERIFIER_AND_ANTI_HACKING.md
food_delivery_env/: Dockerfile  README.md  __init__.py  client.py  models.py  openenv.yaml  pyproject.toml
food_delivery_env/docs/: SPEC.md
food_delivery_env/scripts/: demo_client_episode.py
food_delivery_env/server/: __init__.py  app.py  food_delivery_environment.py
food_delivery_env/tests/: test_environment.py  test_models.py  test_server_client.py
scripts/: demo_client_episode.py  run_fixed_seed_pipeline.sh
tenantsafe/: __init__.py  env.py  policies.py
tests/: test_anti_hacking.py  test_smoke.py  test_tenantsafe_env.py
training/: __init__.py  changeguard_tool_env.py  evaluate_policy.py  train_grpo.py
