[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "changeguard-env"
version = "0.2.0"
description = "ChangeGuard OpenEnv package (tenant-aware upgrade commander)"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "ChangeGuard Team" }]
dependencies = [
  "openenv-core>=0.2.0",
]

[project.optional-dependencies]
training = [
  "datasets>=2.19.0",
  "trl>=0.9.0",
  "transformers>=4.40.0",
  "accelerate>=0.30.0",
  "peft>=0.11.0",
]

[project.scripts]
server = "changeguard.server.app:main"
changeguard-server = "changeguard.server.app:main"
changeguard-train = "training.train_grpo:main"
changeguard-eval = "training.evaluate_policy:main"

[project.entry-points."openenv.environments"]
changeguard = "changeguard.server.app:create_app"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["changeguard*", "training*"]
exclude = ["tests*", "notebooks*", "docs*", "tenantsafe*"]

[tool.setuptools.package-data]
changeguard = ["openenv.yaml"]
