[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "changeguard-env"
version = "0.2.0"
description = "ChangeGuard OpenEnv package (tenant-aware upgrade commander)"
readme = "README.md"
requires-python = ">=3.10,<3.13"
authors = [{ name = "ChangeGuard Team" }]
dependencies = [
  "openenv-core>=0.2.0",
]

[project.optional-dependencies]
training = [
  "torch>=2.2.0",
  "datasets>=2.19.0",
  "trl>=0.9.0",
  "transformers>=4.40.0",
  "accelerate>=0.30.0",
  "peft>=0.11.0",
]

[project.scripts]
server = "changeguard.server.app:main"
changeguard-server = "changeguard.server.app:main"
changeguard-train = "changeguard.training.train_grpo:main"
changeguard-eval = "changeguard.training.evaluate_policy:main"

[project.entry-points."openenv.environments"]
changeguard = "changeguard.server.app:create_app"

[tool.setuptools]
# Flat layout: pyproject.toml AND __init__.py both sit in this dir, so the
# project dir IS the `changeguard` package. Enumerate packages explicitly and
# map the root package to "." — subpackages inherit via path convention.
include-package-data = true
packages = ["changeguard", "changeguard.server", "changeguard.training"]

[tool.setuptools.package-dir]
"changeguard" = "."

[tool.uv]
managed = true
